--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,17 @@
+# full, absolute path to the credentials.json file needed for oAuth
 credtials_path: "credentials.json"
+
+# full, absolute path to the token.pickle file needed for oAuth
 token_path: "token.pickle"
+
+# full, absolute path to the local folder, in which sql dumps are (temporary) stored
 local_backup_folder: "/Users/finn/Desktop"
+
+# name of the remote google drive folder, into which sql dumps are uploaded for permanent storage
 remote_backup_folder: "GitBackupYamlTest"
-contain_querry: ".sql"
+
+# the query used to determine whether a file in the local_backup_folder should be uploaded
+contain_query: ".sql"
+
+# the target postgres dp to backup / create a dump of
 target_db: "vsdb"
